[package]
name = "ansimake"
version = "0.1.0"
edition = "2021"
authors = ["Dotan Nahum <dotan@rng0.io>"]
description = "Quickly convert pixel images of ANSI art created with AI to actual ANSI art"
license = "MIT"
repository = "https://github.com/jondot/ansimake"
homepage = "https://github.com/jondot/ansimake"
documentation = "https://docs.rs/ansimake"
keywords = ["ansi", "art", "terminal", "image", "converter"]
categories = ["command-line-utilities", "multimedia", "text-processing"]

[dependencies]
image = "0.25"
terminal_size = "0.3"
clap = { version = "4.4", features = ["derive"] }
palette = "0.7"
